--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,7 +36,7 @@ aside{
     margin: 10px;
     border: dotted 1px;
     padding: 10px;
-    background-color: #685fdd ;
+    background-color:  greenyellow ;
     color: azure;
 }
 
