--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,13 +35,13 @@ aside{
     width: 200px;
     margin: 10px;
     border: dotted 1px;
-    padding: 10px;
+    padding: 1rem;
     background-color: #685fdd ;
     color: azure;
 }
 
 footer{
-    margin-top: 10px;
+    margin-top: 15px;
     border-top: 1px solid black;
     text-align: center;
 }
