--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@ aside h2{
     color: rgb(0, 0, 0);
 }
 
-header, .grid, footer{
+header, footer, .grid{
     margin: 0 auto;
     max-width: 840px;
 }
