--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ nav {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: steelblue;
+    background-color: rgb(0, 51, 94);
     padding: 1rem;
 }
 
