--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -27,7 +27,8 @@ p{
 }
 
 body{
-   max-width: 100%;
+   max-width: 900px;
+   margin: 0 auto;
    
 }
 
@@ -56,12 +57,12 @@ footer{
     grid-template-columns: 3fr 1fr;
 }
 
-.hero div{
+.hero{
     position: relative;
 }
 #background{
     display: block;
-    width: 1000px;
+    width: 100%;
     height: auto;
     opacity: 0.5;
 }
@@ -69,14 +70,14 @@ footer{
 .hero h1{
     position: absolute;
     left: 40px;
-    top: 100px;
+    top: 40px;
 }
 
 .hero article{
     position: absolute;
     left: 40px;
-    top: 630px;
-    max-width: 40%
+    top: 300px;
+    max-width: 80%
 
 
 }
@@ -87,13 +88,15 @@ article img{
 
 .hero p {
     opacity: 10;
+    
 }
 
 
 article{
     background-color: #575A5E;
     color: white;
-    
+    padding: 10px;
+
 }
 
 header{
@@ -102,7 +105,6 @@ header{
 	grid-template-columns: 150px 1fr;
 	align-items: center;
 	border-bottom: 1px solid #ccc;
-	max-width: 840px;
     background-color:rgb(0, 51, 94);
     padding: 0.5rem;
     font-weight: 700;
@@ -177,18 +179,19 @@ nav{
 
 .adventuredivision{
     display: flex;
+
     
 }
 
-
+figure{
+    margin: 5px;
+}
 figure img{
     height: 150px;
-    
+    width: 100%;
 }
 
-.todo{
-    justify-items: center;;
-}
+
 
 
 /*ab0a8b*/
