--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -195,3 +195,47 @@ figure img{
 
 
 /*ab0a8b*/
+
+/* Contact page */
+
+
+.contactinformation{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contactinformation ul{
+    align-content: center;;
+}
+
+
+
+.formmsm{
+    display: grid;
+    grid-gap: 5px;
+    background-color: aqua;
+    border-bottom: 10px solid black;
+}
+
+.personalinfo{
+    display: flex;
+    justify-content: space-around;
+}
+
+.personalinfo label{
+font-weight: 600;
+}
+
+.message{
+    display: grid;
+}
+
+button{
+    margin: 5px auto;
+    padding: 5px;
+}
+
+.staffdivision{
+    display: flex;
+    justify-content: space-between;
+}
