--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -87,7 +87,7 @@ article img{
 }
 
 .hero p {
-    opacity: 10;
+    opacity: 1;
     
 }
 
@@ -239,4 +239,168 @@ button{
 .staffdivision{
     display: flex;
     justify-content: space-between;
+}
+
+
+
+/* Trips Page */ 
+
+.call_to_action{
+    display: grid;
+    
+    
+}
+
+.pictures{
+    display: flex;
+    justify-content: space-between;
+}
+
+.pictures img, .pictures figcaption{
+    width: 250px;
+
+}
+
+.link p{
+ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.link a{
+    text-decoration: none;
+    color: rgb(72, 0, 255);
+}
+
+.tabledivision{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 2fr;
+}
+
+.table table, th, tr{
+    border: 1px solid black;
+
+}
+
+.table{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    margin: 0 auto;
+}
+.table table{
+    width: 400px;
+    height: 100%;
+}
+.tableinformation{
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+.headingrow{
+    background-color: aqua;
+    height: 40px;
+}
+
+.commentbox textarea{
+ 
+    width: 100%;
+    height: 50px;
+}
+
+.commentbox label{
+    font-size: 1.3rem;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.commentbutton{
+    font-weight: 700;
+    
+}
+
+
+/* Index */
+
+.background img{
+    width: 100%;
+    height: 700px;
+    
+}
+
+.background{
+    position:relative;
+}
+
+.background p{
+    position: absolute;
+    left: 40px;
+    top: 100px;
+    color: black;
+    font-weight: 700;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.5rem;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.background a{
+    position: absolute;
+    left:220px;
+    top: 200px;
+    color: rgb(255, 141, 2);
+    font-size: 2rem;
+    text-decoration: none;
+}
+
+.newsletter form{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-row-gap:10px;
+    
+   
+}
+
+.newsletter legend{
+    text-align: center;
+    font-size: 1.3rem;
+}
+
+.signupbutton{
+    justify-self: center;
+}
+
+.signupbutton button{
+    border-radius: 20%;
+    background-color: aquamarine;
+}
+
+.picturesinfo{
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid black;
+    margin: 0 auto;
+    background-color: aquamarine;
+}
+
+.picturesinfo img{
+    width: 200px;
+    height: 100%;
+    justify-self: center;
+    align-items: center;
+    
+}
+
+.picturesinfo p{
+    width: 200px
+}
+
+.info1{
+    display: grid;
+}
+
+.info2{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.homepagewire a{
+    font-size: 1.3rem;
 }
